--- a/edition/resumes.html
+++ b/edition/resumes.html
@@ -19,7 +19,7 @@
           <p class="epigraph">
             <em class="foreign">Exegi monumentum....</em>
           </p>
-          <h2>Résumés</h2>
+          <h2>Résumé</h2>
         </header>
       </section>
       <section>
