--- a/edition/index.html
+++ b/edition/index.html
@@ -45,6 +45,7 @@
                   <li><a href="sequence02.html">Séquence 02 (10 mai 2021)</a></li>
                   <li><a href="sequence03.html">Séquence 03 (6 septembre 2021)</a></li>
                   <li><a href="sequence04.html">Séquence 04 (18 octobre 2021)</a></li>
+                  <li><a href="sequence05.html">Séquence 05 (18 novembre 2021)</a></li>
                </ul>
             </section>
                
