--- a/edition/index.html
+++ b/edition/index.html
@@ -10,10 +10,10 @@
       <main>
          <section>
             <header>
-               <h1>L’architecture 
-                  <br>considérée 
-                  <br>sous le rapport de l’art, 
-                  <br>des mœurs 
+               <h1>L’architecture
+                  <br>considérée
+                  <br>sous le rapport de l’art,
+                  <br>des mœurs
                   <br>et de la législation&nbsp;;</h1>
                <h2 class="docAuthor">par C.&nbsp;N. Ledoux</h2>
                <p class="epigraph">
@@ -46,9 +46,10 @@
                   <li><a href="sequence03.html">Séquence 03 (6 septembre 2021)</a></li>
                   <li><a href="sequence04.html">Séquence 04 (18 octobre 2021)</a></li>
                   <li><a href="sequence05.html">Séquence 05 (18 novembre 2021)</a></li>
+                  <li><a href="sequence05.html">Séquence 06 (10 décembre 2021)</a></li>
                </ul>
             </section>
-               
+
          </section>
       </main>
    </body>
