--- a/edition/index.html
+++ b/edition/index.html
@@ -47,6 +47,7 @@
                   <li><a href="sequence04.html">Séquence 04 (18 octobre 2021)</a></li>
                   <li><a href="sequence05.html">Séquence 05 (18 novembre 2021)</a></li>
                   <li><a href="sequence06.html">Séquence 06 (10 décembre 2021)</a></li>
+                  <li><a href="sequence07.html">Séquence 07 (31 janvier 2022)</a></li>
                </ul>
             </section>
 
