ajouts dans l'équipe

--- a/edition/resumes.html
+++ b/edition/resumes.html
@@ -24,6 +24,21 @@
       </section>
       <section>
         <div>
+          <h4>Introduction</h4>
+          <p><em>p. 1</em></p>
+          <p>Dédicace au Tsar Alexandre de Russie et parallèle avec Alexandre le Grand. Circonstances difficiles dans lesquelles Ledoux a effectué son travail de conception du livre.
+          Raison de la conception : offrir au lecteur un projet élaboré pour insuffler un mouvement créateur qui fasse enfanter des chefs d’œuvres.
+          Description de la ville idéale : usines populeuses, monuments luxueux, habitations consacrées aux plaisirs aux environs, villages et bourgs contrastant par leur simplicité.</p>
+        </div>
+        <div><p>Hiérarchie des édifices. Temple à Dieu qui les domine tous et règle la vie de l’homme. Puis temples de la Morale, Philosophie, Loi. La Vertu peut se passer de temple. Importance du bâtiment consacré à la Sagesse où tous les âges de la vie se rencontrent. Ecole qui allie la Sagesse et la Loi pour construire l’honnête homme.
+        Puissance de la Beauté au service de la Sagesse.
+        Oikema : lieu du vice qui conduit l’homme à la vertu.</p></div>
+        
+        <div><p>Cénobie. Seule la Concorde construit une société harmonieuse. Monuments qui rassemblent les hommes : théâtres, arcs de triomphe et cimetières.
+          – Temple (Palais) de la Justice, Prétoire et Pacifère : lieux de la Loi qui maintient l’Harmonie. – Arts mécaniques.
+        </p></div>
+        
+        <div>
           <h4>[Postérité de l'architecte]</h4>
           <p><em>p. 9</em></p>
           <p>Tirer profit des découvertes du passé ; valoriser ces découvertes et le sentiment qui les a provoquées, opposé aux « folles productions d’une imagination délirante » – toute action doit contribuer au bien social – la juxtaposition de ces actions doit éclairer les ténèbres – toutes les nations doivent y contribuer, et l’Architecte a un rôle clé dans ce programme – comme la rosée n’est célébrée qu’après la récolte, l’Architecte ne sera récompensé que « par l’immortalité de son nom » – la postérité admirera ses œuvres, débarrassées de tout « amalgame falsificateur » lié aux circonstances de leur création – ces œuvres indiqueront les principes « confirmés par l’expérience », les « règles immuables » de la construction. – 1. Choix du site et orientation du bâtiment en fonction des vents et du soleil.</p>
