--- a/edition/resumes.html
+++ b/edition/resumes.html
@@ -1308,11 +1308,13 @@
               <p>
                 <em>p. 225</em>
               </p>
+              <p>﻿Description de la vue de coupe. – Distribution des gradins. Commentaire sur l’imposte décorative. La colonnade. Ornementations de la corniche. – Contrairement à ce qui se serait passé si la recherche du profit avait commandé, il n’y a pas de loges dans les hauteurs, mais des gradins pour le public sans fortune, qui profite ainsi de l’instruction morale donnée par le théâtre. – [Comparaison peu claire : les plantes parasites dépérissent faute de nourriture, mais prospèrent dans une bonne terre]</p>
             </div>
             <div>
               <p>
                 <em>p. 226</em>
               </p>
+              <p></p>
             </div>
             <div>
               <p>
@@ -1323,31 +1325,45 @@
               <p>
                 <em>p. 228</em>
               </p>
+              <p>"La mythologie est une source d’inspiration pour le décorateur. Quand vient la nuit, le théâtre s’illumine./
+                Description du plafond représenté sur la planche 122 : Apollon préside à l’assemblée des arts. Plaisir de l’œil aux dorures et au bleu du ciel peint. Problème de la durée de ces décors : la peinture à l’huile noircit s’il n’y a pas une ventilation suffisante, la peinture à fresque s’efface avec le temps. / Il est vain de vouloir que les ouvrages durent éternellement, tout passe, comme le sentiment amoureux. Le mauvais goût rococo, qui oublie l’harmonie des proportions, ne rend pas justice à la vraie beauté féminine qui nous élève à l’idéal. "</p>
             </div>
             <div>
               <p>
                 <em>p. 229</em>
               </p>
+              <p>Description de l’avant-scène, caractère ferme et prononcé. / [Note : Souhait d’expériences acoustiques. Les musiciens veulent être visibles sur le théâtre, et résistent à la raison, qui voudrait qu’ils soient dissimulés dans la fosse et que la musique ne couvre pas le son des paroles. Différents traités ont souligné l’intérêt de placer la voix au-dessus de l’orchestre. Renvoi au tome III, description de Louveciennes : les musiciens n’ont pas voulu se placer dans les tribunes prévues à cet effet, et ont assourdi le roi. Considérations sur l’acoustique : il faut imiter l’harmonie universelle du monde (proportions et rapports).]</p>
             </div>
             <div>
               <p>
                 <em>p. 230</em>
               </p>
+              <p>L’orchestre ne doit pas se voir et doit être subordonné aux voix. Il faut le placer dans une fosse sous la scène, aménagée selon des principes acoustiques qui en réduisent le volume, pour favoriser l’illusion de l’ensemble du spectacle et l’harmonie générale. / Eloge de l’harmonie comme principe de vie dans la nature, coupé par… [une note cruciale et dramatisée ! L’auteur est interrompu dans sa rédaction – il rédige donc en prison - parce qu’on appelle Ledoux pour l’exécuter. Mais il s’agit d’un homonyme.] Enoncé de thèses métaphysiques : rien ne se perd dans la nature, l’homme revit par la métempsychose. Puissance de l’harmonie sur les hommes.</p>
             </div>
             <div>
               <p>
                 <em>p. 231</em>
+              </p>
+              <p>Puissance de la musique, qui centuple le bonheur, pourquoi n’augmente-t-elle pas aussi la vigueur sexuelle ? Mais tout passe, le rideau tombe./
+                Considérations sur les dimensions du théâtre : la largeur plus grande que la profondeur / [note : dimensions du théâtre de Besançon, dimensions que devrait avoir un grand théâtre./Le budget limite la taille dans une ville du 3e ordre. Économie mal entendue, car une ville pourrait favoriser le théâtre pour occuper tous les oisifs/ considérations peu compréhensibles sur l’intérêt]
               </p>
             </div>
             <div>
               <p>
                 <em>p. 232</em>
               </p>
+              <p>﻿Importance de bien assujettir les châssis -  Économie d’espace et d’argent. 2000 spectateurs dans un théâtre qui occupe une moins grande superficie que les autres [note : on pourrait même ajouter des loges cachées, mais la décence s’y oppose] / et qui est néanmoins spacieux./ Pas de décorations superflues, ni d’angles, encorbellement, etc. qui nuisent à l’acoustique et à l’aération/ La conservation de l’homme doit primer en tout. Partout on voit et on est vu (spectacle, et décence !)/ Fonction religieuse du théâtre dans l’antiquité. Le théâtre d’aujourd’hui doit au moins favoriser les bonnes mœurs.</p>
             </div>
             <div>
               <p>
                 <em>p. 233</em>
               </p>
+              <p>"La place de l’orchestre fait qu’il ne couvre pas le son de la voix. La disposition du théâtre fait qu’on entend et qu’on voit bien de toutes les places (y compris sur le côté). 
+                EFFET GENERAL
+                Réussite de cette disposition : 36 rangs de spectateurs les uns devant les autres. Unité et variété. Par opposition aux théâtres où les spectateurs sont les uns sur les autres, avec des séparations décorées de mauvais goût, des loges, etc.
+                REPONSE AUX OBSERVATIONS.
+                Les dernières places sont moins bonnes que les premières. Oui. C’est comme dans la nature créée par Dieu, tout n’est pas égal. Mais cette disposition est bien meilleure que celle des théâtres ordinaires : les loges y cachent la vue, toutes les places de côté perdent une partie de la scène/ et finalement il n’y a presque aucune place où l’on voie bien./Le génie peut inventer d’autres formes pour aller au même but, mais le théâtre de Besançon est une réussite indépassable : économie des moyens, unités des effets, développement des lignes. 
+                "</p>
             </div>
             <div>
               <p>
