--- a/edition/index.html
+++ b/edition/index.html
@@ -48,7 +48,8 @@
                   <li><a href="sequence05.html">Séquence 05 (18 novembre 2021)</a></li>
                   <li><a href="sequence06.html">Séquence 06 (10 décembre 2021)</a></li>
                   <li><a href="sequence07.html">Séquence 07 (31 janvier 2022)</a></li>
-                  <li><a href="sequence08.html">Séquence 08 (21 février 2022)</a></li>
+                  <li><a href="sequence08.html">Séquence 08 (21 mars 2022)</a></li>
+                  <li><a href="sequence09.html">Séquence 09 (mai 2022)</a></li>
                </ul>
             </section>
 
